--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=5031
 NODE_ENV=development
-MONGO_URL=mongodb+srv://rohithashok19:1327RoH@cluster0.ldufvga.mongodb.net/?appName=Cluster0
-LOCAL_MONGO_URL=mongodb+srv://rohithashok19:1327RoH@cluster0.ldufvga.mongodb.net/?appName=Cluster0
-# MONGO_URL=mongodb://localhost:27017
+# MONGO_URL=mongodb+srv://rohithashok19:1327RoH@cluster0.ldufvga.mongodb.net/?appName=Cluster0
+# LOCAL_MONGO_URL=mongodb+srv://rohithashok19:1327RoH@cluster0.ldufvga.mongodb.net/?appName=Cluster0
+MONGO_URL=mongodb://localhost:27017
 LOG_LEVEL=info
 JWT_ACCESS_SECRET=123456789
 JWT_REFRESH_SECRET=987654321
